[project]
name = "loraprov"
version = "0.1.0"
description = "LoRA/adapter provenance signatures"
authors = [
    {name = "Keith Tyser",email = "ktyser@bu.edu"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pynacl (>=1.5.0,<2.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.6"
pre-commit = "^4.2.0"
pytest = "^8.3.5"

